--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro form</title>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
 
     <!-- Sytlesheets -->
     <link rel="stylesheet" href="./css/normalize.css">
@@ -11,6 +16,27 @@
 </head>
 <body>
 
+    <main class="main-content">
+        <div class="container">
+            <div class="intro-page">
+                <!-- HERO -->
+                <section class="hero">
+                    <div class="hero-main">
+                        <div class="hero-badge">frontend and backend</div>
+                        <h1 class="hero-title">Learn to program by <br> watching <br> professionals</h1>
+                        <p class="hero-text">See how experienced developers solve <br> problems in real time</p>
+                    </div>
+
+                    <div class="hero-bottom"><strong>Try it free 7 days,</strong> then $20/mo</div>
+                </section>
+                <!-- //HERO -->
+
+
+                <!-- FORM -->
+                <!-- //FORM -->
+            </div>
+        </div>
+    </main>
 
 
     <script src="./js/main.js"></script>
