add section sign up forms

--- a/index.html
+++ b/index.html
@@ -26,13 +26,23 @@
                         <h1 class="hero-title">Learn to program by <br> watching <br> professionals</h1>
                         <p class="hero-text">See how experienced developers solve <br> problems in real time</p>
                     </div>
-
                     <div class="hero-bottom"><strong>Try it free 7 days,</strong> then $20/mo</div>
                 </section>
                 <!-- //HERO -->
 
 
                 <!-- FORM -->
+                <form action="https://echo.htmlacademy.ru/" method="post" class="form">
+                    <h2 class="form-title">Sign up for the course and <br> get free 7 days</h2>
+                    <div class="form-fielts">
+                        <input class="form-fielt" name="name" type="text" aria-label="Name" placeholder="First name" required>
+                        <input class="form-fielt" name="last_name" type="text" aria-label="Last-name" placeholder="Last name" required>
+                        <input class="form-fielt" name="email" type="email" aria-label="Email" placeholder="Email" required>
+                        <input class="form-fielt" type="password" name="password" aria-label="Password" placeholder="Password">
+                    </div>
+                    <button type="submit" class="form-submit">Claim your free trial</button>
+                    <div class="form-notice">By clicking the button, you are agreeing to our <a class="form-notice-link" href="#">Terms and Services</a></div>
+                </form>
                 <!-- //FORM -->
             </div>
         </div>
